test/visibility/import/enablesUnqualified/multipleUnqualified/useAndImport-useExcept1d.good
useAndImport-useExcept1d.chpl:21: In function 'main':
useAndImport-useExcept1d.chpl:24: error: 'A' undeclared (first use this function)
